# robot_manual_control

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README_EN.md  requirement.txt  start.sh
Media/: front.avi  front_description.avi
Memories/: db_backup_20260617.json  robot_control.db  robot_control_v2.db  robot_control_v2.db-shm  robot_control_v2.db-wal  robot_control_v2.db.backup_20260617
Models/: neg_two_x.pkl
Models/action_capture/: Kzhen.json  camera_capture.json  result.json  前行.json  原地踏步.json  反复抬左脚.json  左腿抬完右腿抬.json  斗鸡.json  断子绝孙脚.json
manual_control/src/bodyctrl_msgs/: CMakeLists.txt  package.xml
manual_control/src/bodyctrl_msgs/msg/: CmdSetMotorPosition.msg  MotorStatus.msg  MotorStatusMsg.msg  SetMotorPosition.msg
manual_control/src/brain_system/: package.xml  setup.cfg  setup.py
manual_control/src/brain_system/brain_system/: mcp_server.py  think_node.py
manual_control/src/joint_description/: package.xml  setup.py
manual_control/src/joint_description/joint_description/: joint_hub.py  joint_status.py
manual_control/src/mcp_control/: package.xml  setup.cfg  setup.py
manual_control/src/robot_control/: package.xml  setup.py
manual_control/src/robot_description/: CMakeLists.txt  package.xml
manual_control/src/robot_interfaces/: CMakeLists.txt  package.xml
manual_control/src/robot_msg/: CMakeLists.txt  package.xml
manual_control/src/robot_msg/msg/: ActionGroupControl.msg  CanBusData.msg  ImuAcc.msg  ImuAngle.msg  ImuGyro.msg  MotorDriverData.msg  MotorDriverMessage.msg  StandarControl.msg  VisionSpeech.msg
manual_control/src/robot_msg/srv/: CacheSet.srv  ImuRectify.srv
manual_control/src/start_up/: package.xml  setup.cfg  setup.py
manual_control/src/start_up/launch/: base.launch.py
manual_control/src/voice_system/: package.xml  setup.py
(+123 files in other folders)
